@@ -3,7 +3,7 @@ package io.quarkus.paths;
 import java.io.IOException;
 import java.io.Serializable;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Objects;
 
 public class DirectoryPathTree extends OpenContainerPathTree implements Serializable {
 
@@ -28,12 +28,12 @@ public class DirectoryPathTree extends OpenContainerPathTree implements Serializ
 
     public DirectoryPathTree(Path dir, PathFilter pathFilter, boolean manifestEnabled) {
         super(pathFilter, manifestEnabled);
-        this.dir = dir;
+        this.dir = Objects.requireNonNull(dir, "Directory is null");
     }
 
     protected DirectoryPathTree(Path dir, PathFilter pathFilter, PathTreeWithManifest pathTreeWithManifest) {
         super(pathFilter, pathTreeWithManifest);
-        this.dir = dir;
+        this.dir = Objects.requireNonNull(dir, "Directory is null");
     }
 
     @Override
@@ -72,7 +72,7 @@ public class DirectoryPathTree extends OpenContainerPathTree implements Serializ
     }
 
     private void readObject(java.io.ObjectInputStream in) throws IOException, ClassNotFoundException {
-        dir = Paths.get(in.readUTF());
+        dir = Path.of(in.readUTF());
         pathFilter = (PathFilter) in.readObject();
         manifestEnabled = in.readBoolean();
     }
